# AI-UG

./: Cargo.toml  README.md
src/: main.rs  mindist.rs
src/knn/: mod.rs  oldmod.rs
src/mindist/: mod.rs
